--- a/FSMDecoder/CMakeLists.txt
+++ b/FSMDecoder/CMakeLists.txt
@@ -1,9 +1,3 @@
-﻿# CMakeList.txt : CMake project for FSMDecoder, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
-# Add source to this project's executable.
-add_executable (FSMDecoder "FSMDecoder.cpp" "FSMDecoder.h")
-
-# TODO: Add tests and install targets if needed.
+add_executable (FSMDecoder "main.cpp" "main.h" "crc.h" "state.h" "fsm.h")
