--- a/FSMDecoder/CMakeLists.txt
+++ b/FSMDecoder/CMakeLists.txt
@@ -1,3 +1,3 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable (FSMDecoder "main.cpp" "main.h" "crc.h" "state.h" "fsm.h")
+add_executable (FSMDecoder "main.cpp" "crc.h" "state.h" "fsm.h")
